--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
+    "react-select": "^5.9.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
