--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^7.23.2",
     "@mui/x-date-pickers": "^7.23.2",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/lodash": "^4.17.13",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
