--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-APP_ENV=production
-APP_API_PATH=/api
-APP_API_HOST=
-APP_API_SCHEMA=https
-APP_API_PORT=
+VITE_APP_ENV=production
+VITE_APP_API_PATH=/api
+VITE_APP_API_HOST=api.psychoterapia-trzeciakiewicz.pl
+VITE_APP_API_SCHEMA=https
+VITE_APP_API_PORT=
